[package]
name = "tw-nhi-icc-service"
version = "0.2.2"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/magiclen/tw-nhi-icc-service"
homepage = "https://magiclen.org/tw-nhi-icc"
publish = false
keywords = ["smart-card", "pcsc", "nhi-card", "ic-card", "taiwan"]
categories = ["command-line-utilities"]
description = "Read Taiwan NHI cards via HTTP API. 透過 HTTP API 讀取中華民國健保卡。"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
concat-with = "0.2"
terminal_size = "0.3"

anyhow = "1"

tokio = { version = "1", features = ["full"] }
futures = "0.3"

tracing = "0.1"
enable-ansi-support = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.6", features = ["ws"] }
tower-http = { version = "0.4", features = ["trace", "set-header", "cors"] }

once_cell = "1"
pcsc = "2"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"

[dependencies.educe]
version = "0.4"
features = ["Debug"]
default-features = false
